--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kiarano Portfolio</title>
+  <title>Kiara's Portfolio</title>
+  <!-- Quicksand font from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="container">
     <nav class="sidebar" aria-label="Main navigation">
       <div class="sidebar-header">
-        <span class="site-title">Kiarano Portfolio</span>
+        <span class="site-title">Kiara's Portfolio</span>
         <button id="theme-toggle" aria-label="Toggle light/dark mode" title="Toggle theme">
           🌙
         </button>
       </div>
       <ul>
         <li><button onclick="showPage('home')" aria-controls="home">Home</button></li>
-        <li><button onclick="showPage('about')" aria-controls="about">About</button></li>
+        <li><button onclick="showPage('about')" aria-controls="about">About Me</button></li>
+        <li>
+          <a href="resume.pdf" target="_blank" rel="noopener" class="sidebar-link">
+            Resume
+          </a>
+        </li>
         <li><button onclick="showPage('projects')" aria-controls="projects">Projects</button></li>
         <li><button onclick="showPage('gallery')" aria-controls="gallery">Gallery</button></li>
         <li><button onclick="showPage('contact')" aria-controls="contact">Contact</button></li>
@@ -49,11 +56,6 @@
       <section id="contact" class="page" tabindex="0">
         <h1>Contact</h1>
         <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
-        <p>
-          <a href="resume.pdf" target="_blank" rel="noopener" class="resume-link">
-            View Resume (PDF)
-          </a>
-        </p>
         <p>
           <a href="https://www.linkedin.com/in/your-link" target="_blank" rel="noopener">
             LinkedIn Profile
