toggle light/dark

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="sidebar-header">
         <span class="site-title">Kiara's Portfolio</span>
         <button id="theme-toggle" aria-label="Toggle light/dark mode" title="Toggle theme">
-          🌙
+          <span id="theme-icon"></span>
         </button>
       </div>
       <ul>
