--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div class="home-links">
                 <a href="#" class="home-link" onclick="showPage('projects')" aria-label="Go to Projects">
                     <div class="home-link-img-wrapper">
-                        <img src="images/protoglove.jpg" alt="Projects" class="home-link-img" />
+                        <img src="protoglove.jpg" alt="Projects" class="home-link-img" />
                         <span class="home-link-text">Projects</span>
                     </div>
                 </a>
                 <a href="#" class="home-link" onclick="showPage('about')" aria-label="Go to About Me">
                     <div class="home-link-img-wrapper">
-                        <img src="images/thumbnail.jpg" alt="About Me" class="home-link-img" />
+                        <img src="thumbnail.jpg" alt="About Me" class="home-link-img" />
                         <span class="home-link-text">About Me</span>
                     </div>
                 </a>
